# omo_local_planner

./: CMakeLists.txt  package.xml
config/: config.yaml  dwa_config.yaml
launch/: dwa_node.launch.py
logs/: test_data.py
logs/20250812_022408/: meta.json
logs/20250812_022544/: meta.json  run_data.npz
logs/20250812_022644/: meta.json
logs/20250812_022940/: meta.json
logs/20250812_023118/: meta.json
logs/20250812_023340/: meta.json  params.json  run_data.npz
logs/20250812_023350/: meta.json  run_data.npz
logs/20250812_023358/: meta.json
logs/20250812_023552/: meta.json
logs/20250812_023644/: meta.json  run_data.npz
logs/20250812_023652/: meta.json  run_data.npz
logs/20250812_023731/: meta.json
scripts/: dwa_carrot_node.py  dwa_convert_global_path.py  dwa_cost_evaluator.py  dwa_data_provider.py  dwa_distance_cost.py  dwa_executor.py  dwa_node.py  dwa_obstacle_cost.py  dwa_trj_generator.py  rectangle_test_node.py  robot_test.py
